# parking_app

./: .env  .gitignore  Cargo.toml  README.md  l10n.yaml  pubspec.yaml  untranslated_messages.txt
Database/: m_login.sql  m_profiles.sql  m_users.sql  password_reset_codes.sql  t_parking_lots.sql  t_parking_rental_types.sql  スキーマ.駐車場アプリのデータベース.sql  駐車場のデータベース.sql
UI/オーナーUI/: Owner_Dashboard_UI.html  Owner_History_Details_UI.html  Owner_Register_add_UI.html  Owner_Revenue_Management_UI.html  Owner_Start_Usage_UI.html  Owner_Suspension_UI.html  Owner_history_UI.html
UI/マイページUI/: Bank_Account_Management_UI.html  Edit_Profile_UI.html  Vehicle_Information_UI.html
UI/ユーザーUI/: Confirmation_Payment_UI.html  History_UI.html  Home_UI.html  Parking_Search_UI.html  Reservation_Completed_UI.html  Reservation_Confirmation_UI.html  Reservation_Detail_UI.html  Select_Usage_Datetime_UI.html
UI/ログインまたは登録UI/: script.js  styles.css  ログイン.html  新規登録.html  登録完了.html  認証コード.html
UI/予約管理UI/: Approval_Completed_UI.html  Approve_Reservation_UI.html  Reservation Management_UI.html  Reservation_Cancel_UI.html
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
ios/: Podfile
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/l10n/: app_ja.arb  app_zh.arb  intl_en.arb
lib/theme/: app_colors.dart  app_theme.dart  app_typography.dart  sliding_date_picker.dart  text_styles.dart
lib/views/: dummy_screen.dart
src/: README.md  lib.rs  main.rs  mod.rs
src/config/: logging.rs  mod.rs  postgresql_database.rs
src/controllers/: api_base.rs  api_error.rs  api_response.rs  auth_signin_controller.rs  auth_signup_controller.rs  constants.rs  health_controller.rs  mod.rs  parking_lots_controller.rs  parking_lots_image_controller.rs  parking_search_controller.rs  use_history_controller.rs  user_home_controller.rs  validation.rs
src/middlewares/: cors_middleware.rs  csrf_middleware.rs  (+6 more)
(+107 files in other folders)
