[package]
name = "parking_app"
version = "1.0.0"
edition = "2024"

[lib]
name = "parking_app_backend"
path = "src/lib.rs"

[[bin]]
name = "parking_app_server"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4.11.0"
actix-rt = "2.9.0"
actix-cors = "0.7.1"

# Database
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "json", "time"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14.1"

# Environment variables
dotenv = "0.15"
config = "0.15.11"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-actix-web = "0.7"
log = "0.4"
env_logger = "0.11.8"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Async runtime
tokio = { version = "1.28", features = ["full"] }


# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
futures = "0.3"
argon2 = "0.5"
rand = "0.9.1"
async-trait = "0.1.88"
bcrypt = "0.17.0"
derive_more = "0.99.17"
futures-util = "0.3"

# Validation
regex = "1.10.3"
lazy_static = "1.4.0"
validator = { version = "0.16", features = ["derive"] }

# Email
lettre = "0.11.5"

# HTTP client for SMS, etc.
reqwest = { version = "0.12.2", features = ["json"] }

# Development hot reload dependencies
[dev-dependencies]
cargo-watch = "8.5.0"
hotwatch = "0.5.0"

# Profile optimizations for faster development builds
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 2

# Fast development profile
[profile.dev-fast]
inherits = "dev"
debug = 1
incremental = true
codegen-units = 512

[workspace]
members = [
    ".",
]
